--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ToDo",
-  "short_name": "ToDo",
+  "name": "Orbit",
+  "short_name": "Orbit",
   "theme_color": "#00ff00",
   "background_color": "#ff0000",
   "display": "standalone",
